hphp/hack/test/typecheck/foreach_list_async.php.like_types.exp
File "foreach_list_async.php", line 22, characters 15-16:
Invalid argument (Typing[4110])
File "foreach_list_async.php", line 12, characters 20-22:
Expected int
File "foreach_list_async.php", line 16, characters 38-40:
But got dynamic because it is an unenforceable type
